package com.scholarship.backend.controllers;

public class ProfileController {
}
