package com.scholarship.backend.controllers;

public class UserController {
}
