package com.scholarship.backend.entities;

public enum ApplicationStatus {
    SAVED,
    IN_PROGRESS,
    SUBMITTED,
    AWARDED,
    REJECTED
}
