package com.scholarship.backend.services;

public class ProfileService {
}
