package com.scholarship.backend.services;

public class ScholarshipSyncService {
}
